make input and text inputs inherit whitespace to fix translation whitespace causing offsets.

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -483,6 +483,10 @@ input {
     &:focus {
       border-color: $orc-purple;
     }
+
+    &::placeholder {
+      white-space: inherit;
+    }
   }
 }
 
